2005-12-21      Gaius Mulley <gaius@glam.ac.uk>

	* added gm2/gm2-libs-pim/Strings.def and
          gm2/gm2-libs-pim/Strings.mod
 	* modified gm2/Make-lang.in to install new module.

2005-12-19      Gaius Mulley <gaius@glam.ac.uk>

	* implemented logitech compatible library
	  gm2/gm2-libs-pim/RealConversions.def and
          gm2/gm2-libs-pim/RealConversions.mod
	* added regression test for RealConversions
	  testsuite/gm2/pimlib/logitech/run/pass/realconv.mod
	* fixed regression test expect script to set the
	  library path correctly.
	* updated gm2/gm2-libs.texi to reflect addition of
	  RealConversions.mods
	* added gm2/gm2-libs-pim/FloatingUtilities.def
	* added gm2/gm2-libs-pim/FloatingUtilities.mod
	* increased number of builtin functions accessible to GNU Modula-2.
	
2005-12-13      Gaius Mulley <gaius@glam.ac.uk>

	* gm2/gccgm2.c:default_conversion now checks the base type.
	* gm2/gm2-compiler/M2GCCDeclare.mod: add Subrange types onto the
	  to do list, if they are not yet resolved.

2005-12-10      Gaius Mulley <gaius@glam.ac.uk>

	* fixed Copyright in gm2/gm2-libs-pim library modules
	* gm2/gm2-compiler/M2Quads.mod:BuildForToByDo allowed Z type by value.
	* gm2/gm2-compiler/M2Quads.mod:BuildPseudoBy converted by value if type
	  is known.
	* fixes a bug reported by: James V. Cox example given in
	  testsuite/gm2/pim/run/pass/EnumTest.mod

2005-12-10      Gaius Mulley <gaius@glam.ac.uk>

	* fixed Copyright in gm2/gm2-libs-pim library modules

2005-12-06      Gaius Mulley <gaius@glam.ac.uk>

	* fixed Copyright in University of Ulm modules and also p2c.
	* heavily tidied up the p2c source tree.

2005-12-05      Peter P. Eiserloh <peter@eiserloh.org>

	* contributed the gm2 manual page and associated Makefile
	  in the new subdirectory: gm2/man.
	
2005-11-29	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by John Wallace and Juan Reyes
	  concerning FOR loops with negative step values.