@@ -15,7 +15,7 @@ You should have received a copy of the GNU Lesser General Public
 License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA *)
 
-DEFINITION MODULE FloatingUtilies ;
+DEFINITION MODULE FloatingUtilities ;
 
 (*
     Title      : FloatingUtilies
@@ -102,4 +102,4 @@ PROCEDURE Floatl (i: INTEGER) : LONGREAL ;
 PROCEDURE Truncl (r: LONGREAL) : LONGINT ;
 
 
-END FloatingUtilies.
+END FloatingUtilities.
