@@ -15,7 +15,7 @@ You should have received a copy of the GNU Lesser General Public
 License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA *)
 
-IMPLEMENTATION MODULE FloatingUtilies ;
+IMPLEMENTATION MODULE FloatingUtilities ;
 
 
 (*
@@ -141,4 +141,4 @@ BEGIN
 END Truncl ;
 
 
-END FloatingUtilies.
+END FloatingUtilities.
