@@ -14,6 +14,7 @@ Lesser General Public License for more details.
 You should have received a copy of the GNU Lesser General Public
 License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA *)
+
 DEFINITION MODULE Selective ;
 
 (*
@@ -60,8 +61,9 @@ PROCEDURE WriteCharRaw (fd: INTEGER; ch: CHAR) ;
 PROCEDURE ReadCharRaw (fd: INTEGER) : CHAR ;
 
 (*
-   GetTimeOfDay - returns a record, Timeval, filled in with the
+   GetTimeOfDay - fills in a record, Timeval, filled in with the
                   current system time in seconds and microseconds.
+                  It returns zero (see man 3p gettimeofday)
 *)
 
 PROCEDURE GetTimeOfDay (tv: Timeval) : INTEGER ;
